# remind_me_api

./: .gitignore  pyproject.toml
remind_me_api/: check_email.py  main.py  schedule_jobs.py  sms.py
remind_me_api/data/: _all_models.py  db_session.py  events.py
remind_me_api/services/: message_service.py  store_and_query_jobs.py
remind_me_api/static/css/: style.css
remind_me_api/templates/: index.html
remind_me_api/views/: all_views.py
tests/: test_remind_me_api.py
